Update and rename Free Porn To All.html to index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ If you are not a mature adult or are offended by pornography please don't come b
 Have something to say? <a href="https://forum.xnxx.com/"><strong>Please use our Forum</strong></a>, or <a href="https://info.xnxx.com/contact"><strong>contact us</strong></a> directly (warning : we can't read every email).
 <br>
 Advertising, Traffic Trades, Sponsors <a href="https://main.trafficfactory.biz/xnxx-signup" target="_top">Webmasters click here</a>.
-XNXX.COM Copyright 2000-2022. All rights reserved. Thanks for visiting our free sex site.<br>
+FREE PORN TO ALL BY LAB KO KAYO.MWA MWA MWA!!!!<br>
 <a href="https://porn.work/" target="_blank">Become a porn model</a>
 - <a href="https://info.xnxx.com/legal/tos">Terms of service</a>
 - <a href="https://info.xnxx.com/legal/privacy">Privacy policy</a>
