--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </li>
 <li><a href="file:///C:/Users/DRF%20Computer/Desktop/website.html#" class="country-switch init-ok" data-country="ph"> Content <span class="flag-small flag-ph"></span> <span class="icon-f icf-caret-down"></span></a></li>				<li><a href="file:///C:/Users/DRF%20Computer/Desktop/website.html#" id="main-cat-switcher" class="mc-update-infos init-ok"><span class="mcui-name">Straight</span> <span class="icon-f icf-woman mcui-picto"></span> <span class="icon-f icf-caret-down"></span> </a></li>			</ul>
 </div>
-<div class="slogan">100% Free Porn Movies and Sex Content</div>
+<div class="slogan">100% LALABASAN KA AGAD</div>
 <form action="file:///C:/" method="get" id="xnxx-search-bar" class="form-inline mobile-menu mobile-hide">
 <button id="xnxx-search-bar-close" class="mobile-show btn btn-link" type="button"><span class="icon-f icf-close-thin"></span></button>
 <div class="form-group"><input type="text" class="form-control search-input" name="k" id="k" value="" maxlength="2048" placeholder="Search..."></div>
@@ -109,8 +109,8 @@
 <a href="https://multi.xnxx.com/">XNXX Images</a> / <a href="https://multi.xnxx.com/gifs">Animated Gifs</a> / <a href="https://www.sexstories.com/">Stories</a>
 </p>
 <p>
-We hope you enjoyed our free porn movies and pics! <a href="https://www.xnxx.com/" target="_self">Think about bookmarking our site!</a><br>
-If you are not a mature adult or are offended by pornography please don't come back!
+We hope you enjoyed our free porn movies and pics! <a href="https://www.xnxx.com/" target="_self">Did you Cum?</a><br>
+Nawa’y Napasaya kita(❁´◡`❁)
 </p>
 <p>
 Have something to say? <a href="https://forum.xnxx.com/"><strong>Please use our Forum</strong></a>, or <a href="https://info.xnxx.com/contact"><strong>contact us</strong></a> directly (warning : we can't read every email).
